[package]
name = "comic-repack"
authors = ["Alex Koz"]
version = "0.1.3"
edition = "2021"
license = "MIT"

homepage = "https://github.com/boozook/comic-repack"
repository = "https://github.com/boozook/comic-repack.git"
description = "A command line tool to convert comic book archives to other formats."
keywords = ["comic", "convert", "cbz", "cbr", "cb7"]
categories = ["command-line-utilities", "encoding"]


[dependencies]
log = "0.4"
indicatif = "0.17"
thiserror = "1.0"
glob = "0.3"
num_cpus = "1.15"
async_zip = { version = "0.0.15", features = ["full"] }
sevenz-rust = "0.4.2"
archive-reader = "0.3"

futures = "0.3"
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dependencies.image]
version = "0.24"
features = [
	"avif",
	"avif-encoder",
	"avif-decoder",
	"webp-encoder",
	"webp",
	"default",
]

[dependencies.clap]
version = "4.1"
features = ["derive", "unicode"]

[dependencies.console]
version = "0.15"
default-features = false
features = ["ansi-parsing"]
